# rag-stack

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/: health.py  rag.py
app/core/: config.py  logger.py
app/services/: embeddings_gemini.py  semantic.py  vectorstore_qdrant.py
app/utils/: chunking.py
backend/: .env.example  Dockerfile  Makefile  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt
backend/.github/workflows/: cd.yml
backend/app/: main.py
backend/app/api/: rag.py
backend/app/core/: config.py
backend/app/services/: embeddings.py  embeddings_huggingface.py  file_parser.py  semantic.py
backend/app/utils/: chunking.py
backend/tests/: test_rag_basic.py
docker/: docker-compose.yml
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: rag.ts
frontend/src/components/: AnswerCard.tsx  ChunkPreview.tsx  FilePreview.tsx  FileUpload.tsx  QueryForm.tsx
frontend/src/components/ui/: Card.tsx
frontend/src/types/: preview.ts  rag.ts
